@@ -1,26 +1,30 @@
 package school.faang.bjs280789;
 
-import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.Optional;
+import java.util.NoSuchElementException;
+
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
+
 
 public class ListUtils {
     public static int sumOfEvenNumbers(List<Integer> numbers) {
-        return numbers.stream().filter(number -> number % 2 == 0).reduce(0, Integer::sum);
+        return numbers.stream().
+                filter(number -> number % 2 == 0)
+                .reduce(0, Integer::sum);
     }
 
     public static int findMax(List<Integer> numbers) {
-        return numbers.stream().max(Integer::compareTo).get();
+        return numbers.stream().max(Integer::compareTo)
+                .orElseThrow(() -> new NoSuchElementException("Список пуст"));
     }
 
     public static int findAverage(List<Integer> numbers) {
-        Stream<Integer> stream = numbers.stream();
-        int sum = stream.reduce(0, Integer::sum);
-        return sum / numbers.size();
+        return (int) numbers.stream()
+                .mapToInt(Integer::intValue)
+                .average()
+                .orElse(0.0);
     }
 
     public static long countStringsStartingWith(List<String> strings, char c) {
@@ -32,13 +36,13 @@ public class ListUtils {
     public static List<String> filterStringsContainingSubstring(List<String> strings, String substring) {
         return strings.stream()
                 .filter(x -> x.contains(substring))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<String> sortByLength(List<String> strings) {
         return strings.stream()
                 .sorted(Comparator.comparingInt(String::length))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static boolean allMatchCondition(List<Integer> numbers, Predicate<Integer> predicate) {
@@ -50,12 +54,12 @@ public class ListUtils {
         return numbers.stream()
                 .filter(x -> x > number)
                 .min(Integer::compareTo)
-                .orElseThrow();
+                .orElseThrow(() -> new NoSuchElementException("Список пуст"));
     }
 
     public static List<Integer> convertToLengths(List<String> words) {
         return words.stream()
                 .map(String::length)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
